// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BecomeMemberContainer> when already attending to given topic should match snapshot 1`] = `
<div>
  <PrimaryButton
    onClick={[Function]}
  >
    Rezygnuję
  </PrimaryButton>
</div>
`;

exports[`<BecomeMemberContainer> when not attending to given topic yet should match snapshot 1`] = `
<div>
  <PrimaryButton
    onClick={[Function]}
  >
    Chcę być uczestnikiem
  </PrimaryButton>
</div>
`;
